@@ -418,6 +418,9 @@ void __stdcall cfree (void *) __attribute__ ((regparm(1)));
 void *__stdcall cmalloc (cygheap_types, DWORD) __attribute__ ((regparm(2)));
 void *__stdcall crealloc (void *, DWORD) __attribute__ ((regparm(2)));
 void *__stdcall ccalloc (cygheap_types, DWORD, DWORD) __attribute__ ((regparm(3)));
+void *__stdcall cmalloc_abort (cygheap_types, DWORD) __attribute__ ((regparm(2)));
+void *__stdcall crealloc_abort (void *, DWORD) __attribute__ ((regparm(2)));
+void *__stdcall ccalloc_abort (cygheap_types, DWORD, DWORD) __attribute__ ((regparm(3)));
 char *__stdcall cstrdup (const char *) __attribute__ ((regparm(1)));
 char *__stdcall cstrdup1 (const char *) __attribute__ ((regparm(1)));
 void __stdcall cfree_and_set (char *&, char * = NULL) __attribute__ ((regparm(2)));
