@@ -844,7 +844,7 @@ handle_to_fn (HANDLE h, char *posix_fn)
   NTSTATUS res = NtQueryObject (h, ObjectNameInformation, ntfn, sizeof (fnbuf),
   				NULL);
 
-  if (NT_SUCCESS (res))
+  if (!NT_SUCCESS (res))
     {
       strcpy (posix_fn, unknown_file);
       debug_printf ("NtQueryObject failed");
